--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -338,4 +338,12 @@ Fix error field display
     position: static;
 }
 
+.sidebar{
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 1000px;
+    background-color: #5297ea;
+}
+
 /* jhipster-needle-css-add-main JHipster will add new css style */
