--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -343,7 +343,7 @@ Fix error field display
     left: 0;
     width: 100%;
     height: 1000px;
-    background-color: #5297ea;
+    background-color: #fdf4ff;
 }
 
 /* jhipster-needle-css-add-main JHipster will add new css style */
