--- a/src/main/webapp/app/layouts/sidebar/sidebar.html
+++ b/src/main/webapp/app/layouts/sidebar/sidebar.html
@@ -30,18 +30,21 @@
 <div class="sidebar" ng-if=vm.isAuthenticated()>
     <!--Project div-->
     <div>
+        <!--Button calls function .new from project.state.js-->
         <button class="btn btn-primary" ui-sref="project.new" >
             <span class="glyphicon glyphicon-plus"></span>
             <span class="hidden-xs-down" >
                 Create New Project
             </span>
         </button>
+        <!--Button changes state to project-->
         <button class="btn btn-primary" ui-sref="project" >
             <span class="glyphicon glyphicon-plus"></span>
             <span class="hidden-xs-down" >
                 View Your Projects
             </span>
         </button>
+        <!--Button changes state to project-detail({id})-->
         <button class="btn btn-primary btn-sm pull-right" ng-repeat="project in vm.projects track by project.id" ui-sref="project-detail({id:project.id})">
             <span class="glyphicon glyphicon-minus"></span>
             <span class="hidden-xs-down" >
@@ -52,18 +55,21 @@
 
     <!--Team div-->
     <div>
+        <!--Button calls function .new from team.state.js-->
         <button class="btn btn-primary" ui-sref="team.new">
             <span class="glyphicon glyphicon-plus"></span>
             <span class="hidden-xs-down">
                 Create New Team
             </span>
         </button>
+        <!--Button changes state to team-->
         <button class="btn btn-primary" ui-sref="team" >
             <span class="glyphicon glyphicon-plus"></span>
             <span class="hidden-xs-down" >
                 View Your Teams
             </span>
         </button>    
+        <!--Button changes state to team-detail({id})-->
         <button class="btn btn-primary btn-sm pull-right" ng-repeat="team in vm.teams track by team.id" ui-sref="team-detail({id:team.id})">
             <span class="glyphicon glyphicon-minus"></span>
             <span class="hidden-xs-down" >
