--- a/src/main/webapp/content/css/home-screen.css
+++ b/src/main/webapp/content/css/home-screen.css
@@ -1,38 +1,61 @@
 .bg-1 {
-    background: url(/content/images/laptop_opt.jpg) no-repeat;
+    background: url(/content/images/home/white-gray-laptop.jpg) no-repeat;
     background-size: 100%;
+    width:100%;
+    height:100%
+    color:#0f0f0f;
+    font-family:inherit;
 }
 .bg-2 {
-    background-color: #1976d2;
+    background-color: #f55549;
     color: #ffffff;
+    font-family:inherit;
+
 }
 .bg-3 {
-    background-color: #e4b9c0;
+    background-color: #ffffff;
+    font-family:inherit;
+
 }
 .container-fluid {
     padding-top: 70px;
     padding-bottom: 70px;
 }
 .bg-navbar {
-    background:#1a237e;
+    background:#00c853;
 }
 .margin-1 {
-    padding-bottom: 400px;
+    padding-bottom: 370px;
+    text-align: center;
+    font-weight:bold;
+
 }
 h1 {
 font-weight: bold;
 }
-.bg-1-h3 {
+.bg-1-h2 {
     font-weight:bold;
+    width:100%;
+    position: relative;
 }
 .margin-h1 {
     margin-top: 75px;
-    margin-bottom: 75px;
+    margin-bottom: 65px;
+    font-size: 60px;
 }
 .margin-h2{
     margin-top: 25px;
     margin-bottom: 25px;
+    font-size: 36px
+
 }
 .margin-h4 {
     padding-bottom: 25px;
+}
+.btn-color {
+    background-color:#00c853;
+    color:#ffffff;
+}
+.navbar-fontsize {
+    font-size:36px;
 }
