--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -59,6 +59,12 @@
                                 </a>
                             </li>
                         <li ui-sref-active="active">
+                                <a ui-sref="comment" ng-click="vm.collapseNavbar()">
+                                    <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                                    <span >Comment</span>
+                                </a>
+                            </li>
+                        <li ui-sref-active="active">
                                 <a ui-sref="project" ng-click="vm.collapseNavbar()">
                                     <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
                                     <span >Project</span>
