Made some more style changes to home dashboard, added a collapsable for requirements and user stories
Added some TODOs in home controller for data that needs to be pulled into home view

Removed some commented out code in home.html

Removed and consolidated some duplicate css in home-screen.css

Made changes to navbar color and width

Added content to sidebar.html (this might be used in the future)

--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="content/css/home-screen.css">
-<nav class="navbar navbar-default" role="navigation" style="background-color: #c6c3c3">
+<nav class="navbar navbar-default" role="navigation" style="background-color: #c6c3c3; width: 83%; position: relative; left: 17%;">
     <div class="container" style="width: 100%">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" ng-click="vm.toggleNavbar()">
