Made some styling changes to the project links in the sidebar.
Changed the side bar height in home.html from pixels to 100 percent so that content can determine the size of the div.

--- a/src/main/webapp/content/css/home-screen.css
+++ b/src/main/webapp/content/css/home-screen.css
@@ -50,7 +50,7 @@ hr {
     line-height: 2px;
 }
 
-div.project-listing a {
+div.project-listing a#projects {
     color: white;
     text-align: center;
     padding: 10px;
@@ -59,6 +59,13 @@ div.project-listing a {
     align-content: center;
     align-items: center;
     flex-direction: column;
+    border-color: white;
+    border-style: solid;
+    border-width: 2px;
+    margin: 5px;
+    border-radius: 10px;
+    font-size: 15px;
+    width: 100%;
 }
 
 h4 {
