--- a/src/main/webapp/content/css/home-screen.css
+++ b/src/main/webapp/content/css/home-screen.css
@@ -73,3 +73,17 @@ h4 {
     text-align: center;
     padding: 10px;
 }
+
+button.add-project-btn {
+    background-color: transparent;
+    border-style: solid;
+    border-color: white;
+    border-radius: 10px;
+    color: white;
+}
+
+div#project-add-btn {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
