--- a/src/main/webapp/content/css/project-detail.css
+++ b/src/main/webapp/content/css/project-detail.css
@@ -30,6 +30,16 @@ button.add-project-btn {
     color: white;
 }
 
+button.add-requirement-btn, button.add-userstory-btn, button.add-issue-btn {
+    background-color: transparent;
+    border-style: solid;
+    border-color: #c6c3c3;
+    border-radius: 10px;
+    color: grey;
+    margin: 10px;
+    padding: 10px;
+}
+
 div#projectsidebar div#project-add-btn {
     display: flex;
     justify-content: center;
