--- a/src/main/webapp/content/css/home-screen.css
+++ b/src/main/webapp/content/css/home-screen.css
@@ -87,3 +87,67 @@ div#project-add-btn {
     align-content: center;
     justify-content: center;
 }
+.jumbotron {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+    margin-bottom: 0;
+    background-color: #fff;
+    background-image:  url(/content/images/home/white-gray-laptop.jpg);
+    background-repeat:no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+}
+
+.jumbotron-heading {
+    font-weight: 300;
+}
+.jumbotron-heading > h1 {
+    color:#00b3ee;
+}
+.jumbotron .container {
+    max-width: 40rem;
+    background: rgba(255, 255, 255, 0.2);
+    padding:2rem;
+    color:#1a237e;
+}
+
+.jumbotron p {
+    color:#0d47a1;
+}
+
+.album {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    background-color: #f7f7f7;
+}
+
+.card {
+    float: left;
+    width: 33.333%;
+    padding: .75rem;
+    margin-bottom: 2rem;
+    border: 0;
+}
+
+.card > img {
+    margin-bottom: .75rem;
+    max-width:100%;
+}
+.card-header {
+    color: #000000;
+}
+.card-text {
+    font-size: 100%;
+}
+.home-btn {
+    border: 2px solid #000000;
+    color:#ffffff;
+    background-color: #000066;
+}
+footer {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+footer p {
+    margin-bottom: .25rem;
+}
