--- a/src/main/webapp/content/css/project-detail.css
+++ b/src/main/webapp/content/css/project-detail.css
@@ -30,12 +30,22 @@ button.add-project-btn {
     color: white;
 }
 
-button.add-requirement-btn, button.add-userstory-btn, button.add-issue-btn {
+button.add-requirement-btn, button.add-userstory-btn, button.add-issue-btn, button.add-member-btn {
     background-color: transparent;
     border-style: solid;
     border-color: #c6c3c3;
     border-radius: 10px;
     color: grey;
+    margin: 10px;
+    padding: 10px;
+}
+
+button.edit-project-btn {
+    background-color: transparent;
+    border-style: solid;
+    border-color: mediumseagreen;
+    border-radius: 10px;
+    color: mediumseagreen;
     margin: 10px;
     padding: 10px;
 }
