Made style and markup changes to the issues and userstory detail views to match the requirements detail view.

--- a/src/main/webapp/content/css/requirement-detail.css
+++ b/src/main/webapp/content/css/requirement-detail.css
@@ -1,4 +1,4 @@
-button.edit-requirements-btn {
+button.edit-btn {
     background-color: transparent;
     border-style: solid;
     border-color: mediumseagreen;
@@ -26,7 +26,7 @@ hr {
     width: 50%;
 }
 
-.requirement-detail-container {
+.detail-container {
     display: flex;
     flex-direction: column;
     align-items: center;
